alpm-types/src/snapshots/env::invalid_package_option@case_2.snap
---
source: alpm-types/src/env.rs
---
error: invalid input
 | 
 | #somethingelse
 | ^ expected `!`
